# bankeasy_prototype

./: Home.py  app.py  pyproject.toml
pages/: 1_Fraud_Detection.py  2_Wealth_Logic.py
src/bankeasy/: __init__.py
